--- a/backend-nest/.env
+++ b/backend-nest/.env
@@ -4,5 +4,5 @@ HOST = localhost
 
 DATABASE=hotel_realta
 DATABASE_USER=postgres
-DATABASE_PASSWORD=root
+DATABASE_PASSWORD=343293
 SECRET_KEY=MYSECRETKEYCODE2023
