--- a/backend-nest/.gitignore
+++ b/backend-nest/.gitignore
@@ -2,8 +2,9 @@
 .env
 /node_modules
 package.json
-# /src/module/global.module.ts
-# /src/main.ts
+/src/module/global.module.ts
+/src/main.ts
+/dist/*
 
 
 # Logs
