--- a/fronted-nextjs/realta-hotel/package.json
+++ b/fronted-nextjs/realta-hotel/package.json
@@ -23,6 +23,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "antd": "^5.2.0",
     "axios": "^1.2.4",
     "formidable": "^2.1.1",
     "formik": "^2.2.9",
