--- a/fronted-nextjs/realta-hotel/package.json
+++ b/fronted-nextjs/realta-hotel/package.json
@@ -30,9 +30,9 @@
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "next": "^13.1.4",
+    "next": "13.1.4",
     "next-auth": "^4.19.0",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-data-grid": "^7.0.0-beta.22",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
