--- a/fronted-nextjs/realta-hotel/package.json
+++ b/fronted-nextjs/realta-hotel/package.json
@@ -23,6 +23,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/uuid": "^9.0.0",
     "antd": "^5.2.0",
     "axios": "^1.2.4",
     "formidable": "^2.1.1",
@@ -43,6 +44,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.2.2",
     "typescript": "4.9.4",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
