--- a/fronted-nextjs/realta-hotel/package.json
+++ b/fronted-nextjs/realta-hotel/package.json
@@ -29,6 +29,7 @@
     "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.1.4",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/formidable": "^2.0.5",
+    "@types/js-cookie": "^3.0.2",
     "@types/lodash": "^4.14.191",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.33.0",
