--- a/fronted-nextjs/realta-hotel/package.json
+++ b/fronted-nextjs/realta-hotel/package.json
@@ -18,8 +18,10 @@
     "@mui/x-data-grid": "^5.17.21",
     "@mui/x-data-grid-generator": "^5.17.20",
     "@next/font": "13.1.4",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@redux-saga/core": "^1.2.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tremor/react": "^1.8.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
